default/objects/Transit_Contract_Type_Mapping__c/Transit_Contract_Type_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping for the field «Тип работы» in the Transit system in case of selecting credit period in days</description>
    <label>Transit Contract Type Mapping</label>
</CustomObject>