default/objects/Transit_Contract_Type_Mapping__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Contract type value in the Transit DB</inlineHelpText>
    <label>Contract Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>