default/objects/Transit_Contract_Type_Mapping__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <inlineHelpText>Period in days of credit</inlineHelpText>
    <label>Credit Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>