default/objects/Transit_Contract_Type_Mapping__c/fields/Credit_Period_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period_In_Words__c</fullName>
    <label>Credit Period In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>